bugzid:65421 - getting rid of big white gap in IE.

--- a/mt-static/css/hacks/ie.css
+++ b/mt-static/css/hacks/ie.css
@@ -91,7 +91,7 @@ button.big-button {
    but above the modal dialog iframe; this allows the pulldown menus to
    display above all other elements on the screen */
 
-.main-screen #content-header {
+.main-screen #system-msg {
     margin-top: 120px;
 }
 .main-screen #header {
